# wingpanel-indicator-network

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml
data/: CMakeLists.txt  Indicator.css  meson.build  network.appdata.xml.in  network.gresource.xml  network.metainfo.xml.in  network.policy.in
debian/: changelog  control  copyright  rules
old/: Makefile.am  indicator-network-service.vala  indicator3-0.4.vapi  libido3-0.1.vapi  rfkill.vala
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+165 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+166 more)
schemas/: CMakeLists.txt  org.pantheon.desktop.wingpanel.indicators.network.gschema.xml  org.pantheon.desktop.wingpanel.indicators.power.gschema.xml
src/: CMakeLists.txt  Indicator.vala  Utils.vala  indicator-network-service.vala  indicator-network.vala  libnm-gtk.vapi  libnm.vapi  rfkill.vala
src/Services/: Device.vala  DeviceManager.vala  SettingsManager.vala
src/Services/DBusInterfaces/: Device.vala  Properties.vala  UPower.vala
src/Widgets/: AirplaneModeToggle.vala  AutomaticScrollBox.vala  DeviceList.vala  DisplayWidget.vala  EtherInterface.vala  ModemInterface.vala  PopoverWidget.vala  SettingsToggle.vala  VpnInterface.vala  VpnMenuItem.vala  WidgetNMInterface.vala  WifiDialog.vala  WifiInterface.vala  WifiMenuItem.vala
src/Widgets/common/: WidgetNMInterface.vala
src/common/: Utils.vala
src/common/Widgets/: .NMVisualizer.vala.swp  AbstractEtherInterface.vala  AbstractHotspotInterface.vala  AbstractModemInterface.vala  AbstractVpnInterface.vala  AbstractWifiInterface.vala  NMVisualizer.vala  VpnMenuItem.vala  WidgetNMInterface.vala  WifiMenuItem.vala
vapi/: NM-1.0.metadata  NMA-1.0.metadata  NMA4-1.0.metadata  libnm.vapi  libnma-gtk4.vapi  libnma.deps  libnma.vapi  meson.build
